fixed pages similar to assignment 4

--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -42,31 +42,16 @@
         <li><div class="divider"></div></li>
     </ul>
 
-    <!--Content-->
-    <div class="container">
-        <h2 class="center-align blue-grey-text text-darken-3">Homegrown Recipes</h2>
-        <div class="center-align row">
-            <img src="/img/recipe.png">
-            <p>This is website designed by a self taught home chef. From cooking to baking, this chef loves it all.</p>
-            <p>These recipes are homegrown and have been perfected for readers to try at home.</p>
-            <p>Please try and leave us a review! Enjoy!</p>
-            <a href="" class="btn">
-                <span>Email us!</span>
-                <i class="material-icons left">email</i>
-            </a> 
-            <p>Would you like to receive notifications when there are new recipes out?</p>
-            <a href="" class="btn">
-                <span>Yes please!</span>
-                <i class="material-icons left">notifications</i>
-            </a> 
-        </div>
+    <div class="container grey-text center">
+        <h5>OOPS!</h5>
+        <p>Currently you cannot view this page offline</p>
+        <a href="/" class="btn-small orange">Go to Homepage</a>
     </div>
 
-    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/ui.js"></script>
     <script src="/js/app.js"></script>
     <script type="module" src="/js/db.js"></script>
     <script type="module" src="/js/auth.js"></script>
-    
 </body>
+</html>
