--- a/pages/breakfast.html
+++ b/pages/breakfast.html
@@ -41,8 +41,8 @@
         <li><a href="/pages/breakfast.html">Breakfast<i class="material-icons">local_cafe</i></a></li>
         <li><a href="/pages/dinner.html">Dinner<i class="material-icons">local_dining</i></a></li>
         <li><a href="/pages/dessert.html">Dessert<i class="material-icons">cake</i></a></li>
-        <li><div class="divider"></div></li>
         <li><a href="/pages/reviews.html">Reviews<i class="material-icons">chat_bubble</i></a></li>
+        <li><div class="divider"></div></li>
     </ul>
 
     <div class="container">
@@ -142,9 +142,12 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <!--Jquery-->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
+    <script type="module" src="/js/db.js"></script>
+    <script type="module" src="/js/auth.js"></script>
     
 </body>
