--- a/pages/dessert.html
+++ b/pages/dessert.html
@@ -34,7 +34,6 @@
             </ul>
         </div>
     </nav>
-    
     <ul class="sidenav" id="mobile-links">
         <li><a class="subheader">HOMEGROWN RECIPES</a></li>
         <li><a href="/index.html">Home<i class="material-icons">home</i></a></li>
@@ -42,100 +41,114 @@
         <li><a href="/pages/breakfast.html">Breakfast<i class="material-icons">local_cafe</i></a></li>
         <li><a href="/pages/dinner.html">Dinner<i class="material-icons">local_dining</i></a></li>
         <li><a href="/pages/dessert.html">Dessert<i class="material-icons">cake</i></a></li>
-        <li><div class="divider"></div></li>
         <li><a href="/pages/reviews.html">Reviews<i class="material-icons">chat_bubble</i></a></li>
+        <li><div class="divider"></div></li>
     </ul>
-
     <div class="container">
-        <h2 class="center-align blue-grey-text text-darken-3">Dinner Recipes</h2>
+        <h2 class="center-align blue-grey-text text-darken-3">Dessert Recipes</h2>
         <div class="row">
             <div class="card hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img class="activator" src="/img/zuppa.png">
+                  <img class="activator" src="/img/keylime.png">
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">Crock Pot Zuppa Toscana<i class="material-icons right">more_vert</i></span>
+                  <span class="card-title activator grey-text text-darken-4">Key Lime Tarts<i class="material-icons right">more_vert</i></span>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Ingredients<i class="material-icons right">close</i></span>
                     <ul>
-                        <li>1 lb sausage</li>
-                        <li>16oz chicken broth</li>
-                        <li>1 qt water</li>
-                        <li>2 garlic cloves, minced</li>
-                        <li>3-4 large russet potatoes</li>
-                        <li>1 large onion</li>
-                        <li>2 cups kale</li>
-                        <li>1 cup heavy whipping cream</li>
+                        <li>Filling:</li>
+                        <li>4oz cream cheese, softened</li>
+                        <li>4 egg yolks</li>
+                        <li>14oz sweet condensed milk</li>
+                        <li>1/2 cup key lime juice (or lime juice)</li>
+                    </ul>
+                    <ul>
+                        <li>Crust:</li>
+                        <li>1 1/2 cup graham crackers</li>
+                        <li>6 tbs unsalted butter, melted</li>
+                        <li>1/3 cup sugar</li>
                     </ul>
                     <div class="divider"></div>
                     <span class="card-title grey-text text-darken-4">Instructions</span>
                     <ol>
-                        <li>Brown sausage in skillet</li>
-                        <li>Place sausage, chicken broth, water, garlic, potatoes & onion in crock pot</li>
-                        <li>Cook on High for 3-4 hours or Low 5-6 hours</li>
-                        <li>Add kale, let sit for 5 min</li>
-                        <li>Stir in heavy whipping cream</li>
-                        <li>Serve!</li>
+                        <li>Preheat oven 350°F</li>
+                        <li>Line muffin pan w/ liners</li>
+                        <li>Crust: Crush graham, combine w/ butter and sugar, press about a tbs in each liner. Prebake for 5min</li>
+                        <li>Filling: Beat cream cheese then yolks, then milk and lime juice</li>
+                        <li>Pour into liners. Bake 15-16min & refrigerate.</li>
                     </ol>
                 </div>
             </div>
-            </div>
             <div class="card hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img class="activator" src="/img/meatballs.png">
+                  <img class="activator" src="/img/pineapple.png">
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">Meatballs!<i class="material-icons right">more_vert</i></span>
+                  <span class="card-title activator grey-text text-darken-4">Pineapple Upside Down Cake<i class="material-icons right">more_vert</i></span>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Ingredients<i class="material-icons right">close</i></span>
-                    <ul class="circle-list">
-                        <li>1 lb ground beef</li>
-                        <li>Splash of milk</li>
+                    <ul>
+                        <li>1 box yellow cake mix</li>
+                        <li>1 small can of crushed pineapple</li>
+                        <li>3/4 stick of butter</li>
+                        <li>1 cup brown sugar</li>
                         <li>1 egg</li>
-                        <li>Breadcrumbs</li>
-                        <li>Salt & pepper</li>
-                        <li>Garlic & onion powder</li>
-                        <li>Grated parmesan</li>
+                        <li>Whipped cream</li>
                     </ul>
                     <div class="divider"></div>
                     <span class="card-title grey-text text-darken-4">Instructions</span>
                     <ol>
-                        <li>Preheat oven to 400°F</li>
-                        <li>Line baking sheet with alumiinum foil</li>
-                        <li>Combine all ingredients</li>
-                        <li>Form into balls & place on baking sheet</li>
-                        <li>Bake for 10 to 15min</li>
+                        <li>Preheat oven to 350°F</li>
+                        <li>Heat butter & sugar in saucepan until combined</li>
+                        <li>Save 1/2 cup of pineapple and drain the rest</li>
+                        <li>Add pineapple to the butter/sugar in saucepan</li>
+                        <li>Pour into ungreased 8in to 9in cake pan</li>
+                        <li>In a bowl, combine egg, 1/2 cup pineapple juice, & cake mix - don't over mix</li>
+                        <li>Pour gently on top of brown sugar mix</li>
+                        <li>Bake for 20-25 min</li>
+                        <li>Serve warm w/ whipped cream</li>
                     </ol>
                 </div>
             </div>
             <div class="card hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
-                  <img class="activator" src="/img/schnitzel.png">
+                  <img class="activator" src="/img/rumcake.png">
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">Schnitzel<i class="material-icons right">more_vert</i></span>
+                  <span class="card-title activator grey-text text-darken-4">Rum Cake<i class="material-icons right">more_vert</i></span>
                 </div>
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Ingredients<i class="material-icons right">close</i></span>
                     <ul>
-                        <li>Flour</li>
-                        <li>Egg</li>
-                        <li>Breadcrumbs</li>
-                        <li>Pork</li>
-                        <li>Vegetable Oil</li>
-                        <li>Lemon Juice</li>
+                        <li>Cake:</li>
+                        <li>1 cup chopped walnuts</li>
+                        <li>1 box yellow cake mix</li>
+                        <li>1 pkg instant vanilla pudding</li>
+                        <li>4 eggs</li>
+                        <li>1/2 cup water</li>
+                        <li>1/2 cup vegetable oil</li>
+                        <li>1/2 cup spiced rum</li>
+                    </ul>
+                    <ul>
+                        <li>Glaze:</li>
+                        <li>1/4 cup water</li>
+                        <li>1/2 cup spiced rum</li>
+                        <li>1 cup white sugar</li>
+                        <li>1/2 cup butter</li>
                     </ul>
                     <div class="divider"></div>
                     <span class="card-title grey-text text-darken-4">Instructions</span>
                     <ol>
-                        <li>Pound pork to thin</li>
-                        <li>Put flour, egg, & breadcrumbs in three seperate bowls</li>
-                        <li>Coat each slice of pork in flour, then egg, then breadcrumbs</li>
-                        <li>Fry pork on skillet in vegetable oil</li>
-                        <li>Remove from pan and pat excess oil off with papertowel</li>
-                        <li>Serve with lemon juice</li>
+                        <li>Preheat oven to 325°F</li>
+                        <li>Grease & flour 10in bundt pan & sprinkle walnuts on bottom of pan</li>
+                        <li>Combine cake mix, pudding mix, eggs, water, oil, and rum</li>
+                        <li>Pour batter over nuts in pan</li>
+                        <li>Bake 60 min</li>
+                        <li>Glaze: Bomine everything minus the rum - boil for 5 min stirring constantly</li>
+                        <li>Remove from heat and add rum</li>
+                        <li>Poke holes and brush glaze over top and sides of cake</li>
                     </ol>
                 </div>
             </div>
@@ -167,9 +180,8 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <!--Jquery-->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
     <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
+    <script type="module" src="/js/db.js"></script>
+    <script type="module" src="/js/auth.js"></script>
 </body>
