--- a/public/pages/reviews.html
+++ b/public/pages/reviews.html
@@ -134,4 +134,9 @@
     <script src="/js/app.js"></script>
     <script type="module" src="/js/db.js"></script>
     <script type="module" src="/js/auth.js"></script>
+    <!-- Include main Firebase script -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+
+    <!-- Include Firebase Messaging script -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-messaging.js"></script>
 </body>
